@@ -1,3 +1,10 @@
+2005-11-14  Vincent Noel <vnoel@cox.net>
+
+	* log_repaint.c: (logview_update_version_bar):
+	* logview.c: (logview_select_log), (logview_add_logs_from_names):
+	* userprefs.c: (prefs_load), (prefs_save): Correctly save the
+	state even with no opened log.
+
 2005-11-08  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c: (logview_menus_set_state), (logview_add_log),
